--- a/frontend/static/styles/styles.css
+++ b/frontend/static/styles/styles.css
@@ -1,10 +1,17 @@
+body {
+    background-image:url('../imgs/lolAnalyzerBackground.jpg');
+    color: white;
+}
 h1 {
     margin-top: 10%;
     text-align: center;
-    color: red;
+    color: rgb(255, 255, 255);
     font-size: 15vh;
 }
 
+h2 {
+    margin-left: 10%;
+}
 form {
     font-size: 5vh;
     text-align: center;
@@ -19,7 +26,7 @@ input[type="text"] {
 }
 
 input[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #ff0000;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -33,4 +40,21 @@ input[type="submit"]:hover {
 
 #result-text{
     text-align: center;
+    font-size: larger;
+}
+
+button{
+    padding: 10px 20px;
+    background-color: #ff0000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: relative;
+    left: 90%;   
+    transform: translateX(-50%);  
+}
+
+button:hover {
+    background-color: #45a049;   /* Change button color on hover */
 }
